// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<KpiBlock /> should render with a negative variation value 1`] = `
.c2 {
  display: inline-block;
}

.c4 {
  grid-area: title;
  color: hsl(207,13%,45%);
  font-size: 1.4rem;
  margin-top: 0.3rem;
}

.c3 {
  grid-area: value;
  color: hsl(213,17%,20%);
  font-size: 3rem;
  font-weight: 500;
}

.c1 {
  grid-area: variation;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.2rem;
  right: 1rem;
  top: 1rem;
  justify-self: end;
  color: hsl(6,79%,65%);
}

.c0 {
  text-align: center;
  background: hsl(0,100%,100%);
  border: 1px solid hsl(207,22%,90%);
  border-radius: 0.4rem;
  box-shadow: 0 1px 3px 0 rgba(0,0,0,0.04);
  box-sizing: content-box;
  display: grid;
  grid-template-areas: 'variation' 'value' 'title';
  height: 10rem;
  grid-template-rows: max-content max-content max-content;
  padding: 1rem;
  position: relative;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    -100.00
     % 
    <svg
      aria-hidden="true"
      class="c2"
      focusable="false"
      height="20"
      role="img"
      viewBox="0 0 512 512"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g>
        <path
          d="M256 333L103 180h306z"
          data-testid="icon-svg-path"
          fill="hsl(6,79%,65%)"
          fill-rule="evenodd"
        />
      </g>
    </svg>
  </div>
  <div
    class="c3"
  >
    value
  </div>
  <div
    class="c4"
  >
    title
  </div>
</div>
`;

exports[`<KpiBlock /> should render with a positive variation value 1`] = `
.c2 {
  display: inline-block;
}

.c4 {
  grid-area: title;
  color: hsl(207,13%,45%);
  font-size: 1.4rem;
  margin-top: 0.3rem;
}

.c3 {
  grid-area: value;
  color: hsl(213,17%,20%);
  font-size: 3rem;
  font-weight: 500;
}

.c1 {
  grid-area: variation;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.2rem;
  right: 1rem;
  top: 1rem;
  justify-self: end;
  color: hsl(89,53%,52%);
}

.c0 {
  text-align: center;
  background: hsl(0,100%,100%);
  border: 1px solid hsl(207,22%,90%);
  border-radius: 0.4rem;
  box-shadow: 0 1px 3px 0 rgba(0,0,0,0.04);
  box-sizing: content-box;
  display: grid;
  grid-template-areas: 'variation' 'value' 'title';
  height: 10rem;
  grid-template-rows: max-content max-content max-content;
  padding: 1rem;
  position: relative;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    +
    100.00
     % 
    <svg
      aria-hidden="true"
      class="c2"
      focusable="false"
      height="20"
      role="img"
      viewBox="0 0 512 512"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g>
        <path
          d="M256 180l153 153H103z"
          data-testid="icon-svg-path"
          fill="hsl(89,53%,52%)"
          fill-rule="evenodd"
        />
      </g>
    </svg>
  </div>
  <div
    class="c3"
  >
    value
  </div>
  <div
    class="c4"
  >
    title
  </div>
</div>
`;

exports[`<KpiBlock /> should render without a problem 1`] = `
.c2 {
  grid-area: title;
  color: hsl(207,13%,45%);
  font-size: 1.4rem;
  margin-top: 0.3rem;
}

.c1 {
  grid-area: value;
  color: hsl(213,17%,20%);
  font-size: 3rem;
  font-weight: 500;
}

.c0 {
  text-align: center;
  background: hsl(0,100%,100%);
  border: 1px solid hsl(207,22%,90%);
  border-radius: 0.4rem;
  box-shadow: 0 1px 3px 0 rgba(0,0,0,0.04);
  box-sizing: content-box;
  display: grid;
  grid-template-areas: 'variation' 'value' 'title';
  height: 10rem;
  grid-template-rows: auto max-content;
  padding: 1rem;
  position: relative;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    value
  </div>
  <div
    class="c2"
  >
    title
  </div>
</div>
`;
